Add information on browser navigation commands and a corresponding link; remove unnecessary class attributes

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ search_box.submit()</code></pre>
    <li><a href=worst.html#captchas>Captchas</a>
    <li><a href=worst.html#file_downloads>File downloads</a>
    <li><a href=worst.html#http_response_codes>HTTP response codes</a>
-   <li><a href=worst.html#gmail_email_and_facebook_logins>GMail, email, and Facebook logins</a>
+   <li><a href=worst.html#gmail_email_and_facebook_logins>Gmail, email, and Facebook logins</a>
    <li><a href=worst.html#test_dependency>Test dependency</a>
    <li><a href=worst.html#performance_testing>Performance testing</a>
    <li><a href=worst.html#link_spidering>Link spidering</a>
@@ -151,8 +151,9 @@ search_box.submit()</code></pre>
   </ul></li>
  <li><a href=java.html#the_java_support_package>The Java support package</a>
   <ul>
+   <li><a href=java.html#browser_navigation>Browser navigation</a>
    <li><a href=java.html#working_with_colours>Working with colours</a>
-   <li><a href=java.html#working_with>Working with select elements</a>
+   <li><a href=java.html#working_with_select_elements>Working with select elements</a>
    <li><a href=java.html#mouse_and_keyboard_actions_in_detail>Mouse and keyboard actions in detail</a>
    <li><a href=java.html#working_with_web_elements>Working with web elements</a>
   </ul></li>
