--- a/wd.html
+++ b/wd.html
@@ -42,7 +42,6 @@
   <a href="https://en.wikipedia.org/wiki/Same-origin_policy">single-host origin policy.</a>
 </ul>
 
-
 <h2>Driver requirements</h2>
 
 <p>Through WebDriver, Selenium supports all major browsers on the market
@@ -341,7 +340,6 @@ driver = Selenium::WebDriver.for :opera</code></pre>
 
 <h4>PhantomJS</h4>
 
-
 <h2>Browser launching and manipulation</h2>
 
 <!-- #codeExamples -->
@@ -373,7 +371,6 @@ WebDriver driver = new InternetExplorerDriver();
 
 <pre><code class=rb>require "selenium-webdriver"
 driver = Selenium::WebDriver.for :internet_explorer</code></pre>
-
 
 <h2>Waits</h2>
 
@@ -646,15 +643,14 @@ fluentWait.until(new Predicate&lt;By&gt;() {
 });
 browser.findElement(By.tagName("TEXTAREA")).sendKeys("text to enter");</code></pre>
 
+<h2>Support classes</h2>
 
-<h2 class=support_classes>Support classes</h2>
+<h2>HTTP proxies</h2>
 
-<h2 class=http_proxies>HTTP proxies</h2>
+<h2>Page loading strategy</h2>
 
-<h2 class="page_load_strategy">Page loading strategy</h2>
+<h2>Web elements</h2>
 
-<h2 class="webelement">Web elements</h2>
+<h2>Keyboard</h2>
 
-<h2 class="keyboard">Keyboard</h2>
-
-<h2 class="mouse">Mouse</h2>
+<h2>Mouse</h2>
