--- a/grid.html
+++ b/grid.html
@@ -25,8 +25,7 @@
  and to manage different browser versions and browser configurations centrally
  (instead of in each individual test).
 
-
-<h2 class=pros_and_cons>Pros and cons</h2>
+<h2>Pros and cons</h2>
 
 <p>Selenium Grid isn't a silver bullet.
  It solves a subset of common delegation and distribution problems,
@@ -80,7 +79,6 @@
   that prevent them from being used in conjunction with Grid.</dd>
 </dl>
 
-
 <h2>What is a hub and node?</h2>
 
 <p>A <em>hub</em> is a central point
@@ -98,7 +96,6 @@
  A node on Windows might have the capability of
  offering Internet Explorer as a browser option,
  whereas this wouldn't be possible on Linux or Mac.
-
 
 <h2>Rolling your own grid</h2>
 
