Add code which enables page jumps

--- a/quick.html
+++ b/quick.html
@@ -11,9 +11,9 @@
 <h1>Quick tour</h1>
 
 <p>Selenium is not just one tool or API
- but it composes many tools.
+ but it composes many tools.</p>
 
-
+<a name="webdriver"</a>
 <h2>WebDriver</h2>
 
 <p><em><a href=wd.html>WebDriver</a></em> is also known as Selenium
@@ -25,7 +25,7 @@ WebDriver does not require its API to be compiled with application
 code, it is not intrusive in nature. Hence, you are testing the
 same application which you push live.
 
-
+<a name="selenium_remote_control"></a>
 <h2>Selenium Remote Control</h2>
 
 <p><em><a href=rc.html>Selenium Remote Control</a></em> is also known
@@ -39,7 +39,7 @@ Selenium 3 would completely get rid of Selenium RC APIs. If you are
 still using Selenium RC then you must
 <em><a href=rctowd.html>migrate</a></em> to Selenium WebDriver.
 
-
+<a name="selenium_ide"></a>
 <h2>Selenium IDE</h2>
 
 <p><em><a href=ide.html>Selenium IDE</a></em> is a
@@ -52,7 +52,7 @@ more than getting acquainted with element locators or generating
 <i>throw away code</i>. We're sure that once you get used to the
 WebDriver API, you will never use Selenium IDE.
 
-
+<a name="selenium_grid"></a>
 <h2>Selenium Grid</h2>
 
 <p> Soon after development of WebDriver tests, you may face a need of
