Add code which enables page jumps

--- a/intro.html
+++ b/intro.html
@@ -10,7 +10,7 @@
 
 <h1>Introduction</h1>
 
-
+<a name="the_selenium_project_and_tools"></a>
 <h2>The Selenium project and tools</h2>
 
 
@@ -127,7 +127,7 @@
  where the goal is to turn the WebDriver component in Selenium
  into the <em>du jeur</em> remote control library for user agents.
 
-
+<a name="on_test_automation"></a>
 <h2>On test automation</h2>
 
 <p>First, start by asking yourself whether or not you really need to use a browser.
@@ -350,7 +350,7 @@ Assert.assertTrue("Sparkles should have been created, with all attributes intact
  Then all you have to do is log in as the user, locate Sparkles,
  and add her to the cart.
 
-
+<a name="types_of_testing"></a>
 <h2>Types of testing</h2>
 
 <p>TODO: Add paragraphs about acceptance testing, performance testing,
@@ -358,7 +358,7 @@ Assert.assertTrue("Sparkles should have been created, with all attributes intact
  behavior-driven development (JBehave, Capybara, & Robot Framework),
  with how they relate to Selenium.
 
-
+<a name="about_this_documentation"></a>
 <h2>About this documentation</h2>
 
 <p>These docs, like the code itself, are maintained 100% by volunteers
