Add code which enables page jumps

--- a/install.html
+++ b/install.html
@@ -15,9 +15,9 @@
  but rather set up your test automation project to use such binaries
  in the language of your choice.
  The Selenium binaries you would need
- depends on browsers you want to run your tests in.
+ depend on browsers you want to run your tests in.
 
-
+<a name="using_browser_specific_jar"></a>
 <h2>Using browser specific JAR</h2>
 
 <p>If you want to run tests in only a specific browser,
@@ -45,7 +45,7 @@
 &lt;/dependency&gt;
 </pre>
 
-
+<a name="using_non_browser_specific_jar"></a>
 <h2>Using non browser specific JAR</h2>
 
 <p>More often than not, you would need to run tests
@@ -64,7 +64,7 @@
 &lt;/dependency&gt;
 </pre>
 
-
+<a name="using_standalone_jar"></a>
 <h2>Using standalone JAR</h2>
 
 <p>If you plan to use <a href=grid.html>Selenium Grid</a>,
