Add code which enables page jumps

--- a/start.html
+++ b/start.html
@@ -32,7 +32,7 @@
 <p>More details about drivers can be found in
  <a href=drivers.html>Driver Idiosyncracies</a>.
 
-
+<a name="consumer_browsers"></a>
 <h2>Consumer browsers</h2>
 
 <p>The Selenium framework officially supports the following browsers:
@@ -47,7 +47,7 @@
  <tr><td>Safari</td> <td>Selenium</td> <td>5.1 and newer</td></tr>
 </table>
 
-
+<a name="specialised_browsers"></a>
 <h2>Specialised browsers</h2>
 
 <p>There is also a set of specialized browsers out there
@@ -71,7 +71,7 @@
  </tr>
 </table>
 
-
+<a name="other_third_party_drivers_and_plugins"></a>
 <h2>Other third party drivers and plugins</h2>
 
 <p>Selenium can be extended through the use of plugins. Here are a number of plugins created and maintained by third parties. For more information on how to create your own plugin or have it listed, consult the docs.
@@ -90,7 +90,7 @@
  </tr>
 </table>
 
-
+<a name="locating_elements"></a>
 <h2>Locating elements</h2>
 
 
@@ -248,7 +248,7 @@ readable as possible.  Asking WebDriver to traverse the DOM structure
 is an expensive operation, and the more you can narrow the scope of
 your search, the better.
 
-
+<a name="performing__actions_on_the_aut"></a>
 <h2>Performing actions on the AUT</h2>
 
 <p>You can set an element's text using the sendKeys method as follows:
