Add code which enables page jumps

--- a/wd.html
+++ b/wd.html
@@ -42,7 +42,7 @@
   <a href="https://en.wikipedia.org/wiki/Same-origin_policy">single-host origin policy.</a>
 </ul>
 
-
+<a name="driver_requirements"></a>
 <h2>Driver requirements</h2>
 
 <p>Through WebDriver, Selenium supports all major browsers on the market
@@ -341,7 +341,7 @@ driver = Selenium::WebDriver.for :opera</code></pre>
 
 <h4>PhantomJS</h4>
 
-
+<a name="browser_launching_and_manipulation"></a>
 <h2>Browser launching and manipulation</h2>
 
 <!-- #codeExamples -->
@@ -374,7 +374,7 @@ WebDriver driver = new InternetExplorerDriver();
 <pre><code class=rb>require "selenium-webdriver"
 driver = Selenium::WebDriver.for :internet_explorer</code></pre>
 
-
+<a name="waits"></a>
 <h2>Waits</h2>
 
 <p>WebDriver can generally be said to have a blocking API.
@@ -646,15 +646,20 @@ fluentWait.until(new Predicate&lt;By&gt;() {
 });
 browser.findElement(By.tagName("TEXTAREA")).sendKeys("text to enter");</code></pre>
 
+<a name="support_classes"></a>
+<h2>Support classes</h2>
 
-<h2 class=support_classes>Support classes</h2>
+<a name="http_proxies"></a>
+<h2>HTTP proxies</h2>
 
-<h2 class=http_proxies>HTTP proxies</h2>
+<a name="page_loading_strategy"></a>
+<h2>Page loading strategy</h2>
 
-<h2 class="page_load_strategy">Page loading strategy</h2>
+<a name="web_elements"></a>
+<h2>Web elements</h2>
 
-<h2 class="webelement">Web elements</h2>
+<a name="keyboard"></a>
+<h2>Keyboard</h2>
 
-<h2 class="keyboard">Keyboard</h2>
-
-<h2 class="mouse">Mouse</h2>
+<a name="mouse"></a>
+<h2>Mouse</h2>
