Add code which enables page jumps

--- a/worst.html
+++ b/worst.html
@@ -10,7 +10,7 @@
 
 <h1>Worst practices</h1>
 
-
+<a name="captchas"></a>
 <h2>Captchas</h2>
 
 <p>CAPTCHA, short for <em>Completely Automated Public Turing test
@@ -23,7 +23,7 @@
  <li>Add a hook to allow tests to bypass the CAPTCHA
 </ul>
 
-
+<a name="file_downloads"></a>
 <h2>File downloads</h2>
 
 <p>Whilst it is possible to start a download
@@ -37,7 +37,7 @@
  and pass it to a HTTP request library like
  <a href=https://curl.haxx.se/libcurl/>libcurl</a>.
 
-
+<a name="http_response_codes"></a>
 <h2>HTTP response codes</h2>
 
 <p>For some browser configurations in Selenium RC,
@@ -89,7 +89,7 @@
  so opting to use a proxy
  allows you to have a solution that works for every browser.
 
-
+<a name="gmail_email_and_facebook_logins"></a>
 <h2>Gmail, email, and Facebook logins</h2>
 
 <p>For multiple reasons, logging into sites like Gmail and Facebook
@@ -119,7 +119,7 @@
  with a <code>webdriver</code> property
  so that Denial of Service attacks can be mitigated.
 
-
+<a name="test_dependency"></a>
 <h2>Test dependency</h2>
 <p>
   A common idea and misconception about automated testing is regarding a
@@ -127,7 +127,7 @@
   and not rely on other tests to complete in order to be successful.
 </p>
 
-
+<a name="performance_testing"></a>
 <h2>Performance testing</h2>
 
 <p>Performance testing using Selenium and WebDriver
@@ -174,7 +174,7 @@
 
 <p>Example (open source) packages to use are: Jmeter ?
 
-
+<a name="link_spidering"></a>
 <h2>Link spidering</h2>
 
 <p>Using WebDriver to spider through links
