Add code which enables page jumps

--- a/grid.html
+++ b/grid.html
@@ -25,8 +25,8 @@
  and to manage different browser versions and browser configurations centrally
  (instead of in each individual test).
 
-
-<h2 class=pros_and_cons>Pros and cons</h2>
+<a name="pros_and_cons"></a>
+<h2>Pros and cons</h2>
 
 <p>Selenium Grid isn't a silver bullet.
  It solves a subset of common delegation and distribution problems,
@@ -80,7 +80,7 @@
   that prevent them from being used in conjunction with Grid.</dd>
 </dl>
 
-
+<a name="what_is_a_hub_and_node"></a>
 <h2>What is a hub and node?</h2>
 
 <p>A <em>hub</em> is a central point
@@ -99,7 +99,7 @@
  offering Internet Explorer as a browser option,
  whereas this wouldn't be possible on Linux or Mac.
 
-
+<a name="rolling_your_own_grid"></a>
 <h2>Rolling your own grid</h2>
 
 <p>To use Selenium Grid,
