Add code which enables page jumps

--- a/drivers.html
+++ b/drivers.html
@@ -10,10 +10,10 @@
 
 <h1>Driver idiosyncrasies</h1>
 
-
+<a name="shared_capabilities"></a>
 <h2>Shared capabilities</h2>
 
-
+<a name="driver_specific_capabilities"></a>
 <h2>Driver specific capabilities</h2>
 
 <h3>Internet Explorer</h3>
