Add code which enables page jumps

--- a/attr.html
+++ b/attr.html
@@ -24,7 +24,7 @@
  No patent liability is assumed with respect
  to the use of the information contained herein.
 
-
+<a name="attributions"></a>
 <h2>Attributions</h2>
 
 <p>Thanks to:
@@ -89,7 +89,7 @@
    <td><a href="https://github.com/isagalaev/highlight.js/blob/master/LICENSE">BSD License</a></tr>
 </table>
 
-
+<a name="html_version_and_source_code"></a>
 <h2>HTML version and source code</h2>
 
 <p>An HTML version of this documentation is freely available from
@@ -101,7 +101,7 @@
  See instructions on how to check out the code via git at
  <a href="//help.github.com/articles/fetching-a-remote/">https://help.github.com/articles/fetching-a-remote/</a>.
 
-
+<a name="license"></a>
 <h2>License</h2>
 
 <p>All code and documentation originating from the Selenium project
