Add code which enables page jumps

--- a/typo.html
+++ b/typo.html
@@ -9,19 +9,19 @@
 
 <h1>Typographical conventions</h1>
 
-
+<a name="capitalisation_of_titles"></a>
 <h2>Capitalisation of titles</h2>
 
 <p>One should avoid title capitalisation,
  such as <i>A Very Fine Heading</i>,
  and instead go for <i>A very fine heading</i>.
  Gratutious capitalisation, or title case,
- often show a misunderstand of – or a disregard for –
+ often show a misunderstanding of – or a disregard for –
  orthographic conventions.
  We prefer what is known as <em>sentence case</em>,
  with a single initial capital to start headers.
 
-
+<a name="line_length"></a>
 <h2>Line length</h2>
 
 <p>When editing the documentation’s source,
