--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ search_box.submit()</code></pre>
  get up to speed right away.
 
 <div id=gettingstarted><ul>
- <li><a href=quick.html#quick_tour>Quick tour</a>
+ <li><a href=quick.html>Quick tour</a>
   <ul>
    <li><a href=quick.html#webdriver>WebDriver</a>
    <li><a href=quick.html#selenium_remote_control>Selenium Remote Control</a>
@@ -78,20 +78,20 @@ search_box.submit()</code></pre>
  explaining how to use Selenium in detail, from bottom up.
 
 <div id=narrative><ul>
- <li><a href=intro.html#introduction>Introduction</a>
+ <li><a href=intro.html>Introduction</a>
   <ul>
    <li><a href=intro.html#the_selenium_project_and_tools>The Selenium project and tools</a>
    <li><a href=intro.html#on_test_automation>On test automation</a>
    <li><a href=intro.html#types_of_testing>Types of testing</a>
    <li><a href=intro.html#about_this_documentation>About this documentation</a>
   </ul></li>
- <li><a href=install.html#selenium_installation>Selenium installation</a>
+ <li><a href=install.html>Selenium installation</a>
   <ul>
    <li><a href=install.html#using_browser_specific_jar>Using browser specific JAR</a>
    <li><a href=install.html#using_non_browser_specific_jar>Using non browser specific JAR</a>
    <li><a href=install.html#using_standalone_jar>Using standalone JAR</a>
   </ul></li>
- <li><a href=start.html#getting_started_with_webdriver>Getting started with WebDriver</a>
+ <li><a href=start.html>Getting started with WebDriver</a>
   <ul>
    <li><a href=start.html#consumer_browsers>Consumer browsers</a>
    <li><a href=start.html#specialised_browsers>Specialised browsers</a>
@@ -99,7 +99,7 @@ search_box.submit()</code></pre>
    <li><a href=start.html#locating_elements>Locating elements</a>
    <li><a href=start.html#performing_actions_on_the_aut>Performing actions on the AUT</a>
   </ul></li>
- <li><a href=wd.html#webdriver>WebDriver</a>
+ <li><a href=wd.html>WebDriver</a>
   <ul>
    <li><a href=wd.html#driver_requirements>Driver requirements</a>
    <li><a href=wd.html#browser_launching_and_manipulation>Browser launching and manipulation</a>
@@ -111,12 +111,12 @@ search_box.submit()</code></pre>
    <li><a href=wd.html#keyboard>Keyboard</a>
    <li><a href=wd.html#mouse>Mouse</a>
   </ul></li>
- <li><a href=remote.html#remote_webdriver>Remote WebDriver</a>
+ <li><a href=remote.html>Remote WebDriver</a>
   <ul>
    <li><a href=remote.html#the_remotewebdriver_server>The RemoteWebDriver server</a>
    <li><a href=remote.html#running_remotewebdriver_client>Running RemoteWebDriver client</a>
   </ul></li>
- <li><a href=guidelines.html#guidelines_and_recommendations>Guidelines and Recommendations</a>
+ <li><a href=guidelines.html>Guidelines and Recommendations</a>
   <ul>
    <li><a href=guidelines.html#page_object_models>Page object models</a>
    <li><a href=guidelines.html#domain_specific_language>Domain Specific Language</a>
@@ -128,31 +128,32 @@ search_box.submit()</code></pre>
    <li><a href=guidelines.html#consider_using_a_fluent_api>Consider using a fluent API</a>
    <li><a href=guidelines.html#fresh_browser_per_test>Fresh browser per test</a>
   </ul></li>
- <li><a href=worst.html#worst_practices>Worst Practices</a>
+ <li><a href=worst.html>Worst Practices</a>
   <ul>
    <li><a href=worst.html#captchas>Captchas</a>
    <li><a href=worst.html#file_downloads>File downloads</a>
    <li><a href=worst.html#http_response_codes>HTTP response codes</a>
-   <li><a href=worst.html#gmail_email_and_facebook_logins>GMail, email, and Facebook logins</a>
+   <li><a href=worst.html#gmail_email_and_facebook_logins>Gmail, email, and Facebook logins</a>
    <li><a href=worst.html#test_dependency>Test dependency</a>
    <li><a href=worst.html#performance_testing>Performance testing</a>
    <li><a href=worst.html#link_spidering>Link spidering</a>
   </ul></li>
- <li><a href=grid.html#selenium_grid>Selenium Grid</a>
+ <li><a href=grid.html>Selenium Grid</a>
   <ul>
    <li><a href=grid.html#pros_and_cons>Pros and cons</a>
    <li><a href=grid.html#what_is_a_hub_and_node>What is a hub and node?</a>
    <li><a href=grid.html#rolling_your_own_grid>Rolling your own grid</a>
   </ul></li>
- <li><a href=drivers.html#driver_idiosyncrasies>Driver idiosyncrasies</a>
+ <li><a href=drivers.html>Driver idiosyncrasies</a>
   <ul>
    <li><a href=drivers.html#shared_capabilities>Shared capabilities</a>
    <li><a href=drivers.html#driver_specific_capabilities>Driver specific capabilities</a>
   </ul></li>
- <li><a href=java.html#the_java_support_package>The Java support package</a>
+ <li><a href=java.html>The Java support package</a>
   <ul>
+   <li><a href=java.html#browser_navigation>Browser navigation</a>
    <li><a href=java.html#working_with_colours>Working with colours</a>
-   <li><a href=java.html#working_with>Working with select elements</a>
+   <li><a href=java.html#working_with_select_elements>Working with select elements</a>
    <li><a href=java.html#mouse_and_keyboard_actions_in_detail>Mouse and keyboard actions in detail</a>
    <li><a href=java.html#working_with_web_elements>Working with web elements</a>
   </ul></li>
@@ -163,13 +164,13 @@ search_box.submit()</code></pre>
 <h2>Front matter</h2>
 
 <div id=frontmatter><ul>
- <li><a href=attr.html#copyright_and_attributions>Copyright and attributions</a>
+ <li><a href=attr.html>Copyright and attributions</a>
   <ul>
    <li><a href=attr.html#attributions>Attributions</a>
    <li><a href=attr.html#html_version_and_source_code>HTML version and source code</a>
    <li><a href=attr.html#license>License</a>
   </ul></li>
- <li><a href=typo.html#typographical_conventions>Typographical conventions</a>
+ <li><a href=typo.html>Typographical conventions</a>
   <ul>
    <li><a href=typo.html#capitalisation_of_titles>Capitalisation of titles</a>
    <li><a href=typo.html#line_length>Line length</a>
