Linked all the links from the index page

--- a/attr.html
+++ b/attr.html
@@ -7,7 +7,7 @@
 <link rel=next title="Typographical Conventions" href=typo.html>
 <script src=docs.js></script>
 
-<h1>Copyright and attributions</h1>
+<h1 id="copyright_and_attributions">Copyright and attributions</h1>
 
 <p><strong>The Selenium Documentation</strong>
 
@@ -25,11 +25,11 @@
  to the use of the information contained herein.
 
 
-<h2>Attributions</h2>
+<h2 id="attributions">Attributions</h2>
 
 <p>Thanks to:
 
-<div id=authors><ul>
+<div id="authors"><ul>
  <li><a href=mailto:ato@mozilla.com>Andreas Tolfsen</a>
  <li><a href=mailto:austenjt@gmail.com>Jon Austen</a>
  <li><a href=mailto:bizob2828@yahoo.com>bizob2828</a>
@@ -90,7 +90,7 @@
 </table>
 
 
-<h2>HTML version and source code</h2>
+<h2 id="html_version_and_source_code">HTML version and source code</h2>
 
 <p>An HTML version of this documentation is freely available from
  <a href="//seleniumhq.github.io/docs">https://seleniumhq.github.io/docs</a>.
@@ -102,7 +102,7 @@
  <a href="//help.github.com/articles/fetching-a-remote/">https://help.github.com/articles/fetching-a-remote/</a>.
 
 
-<h2>License</h2>
+<h2 id="license">License</h2>
 
 <p>All code and documentation originating from the Selenium project
  is licensed under the Apache 2.0 license,
