--- a/drivers.html
+++ b/drivers.html
@@ -8,13 +8,13 @@
 <link rel=next href=java.html title="The Java Support Package">
 <script src=docs.js></script>
 
-<h1>Driver idiosyncrasies</h1>
+<h1 id="driver_idiosyncrasies">Driver idiosyncrasies</h1>
 
 
-<h2>Shared capabilities</h2>
+<h2 id="shared_capabilities">Shared capabilities</h2>
 
 
-<h2>Driver specific capabilities</h2>
+<h2 id="driver_specific_capabilities">Driver specific capabilities</h2>
 
 <h3>Internet Explorer</h3>
 
