--- a/grid.html
+++ b/grid.html
@@ -8,7 +8,7 @@
 <link rel=next href=drivers.html title="Driver Idiosyncracies">
 <script src=docs.js></script>
 
-<h1>Selenium Grid</h1>
+<h1 id="selenium_grid">Selenium Grid</h1>
 
 <p><em>Selenium Grid</em> is a smart proxy server
  that allows Selenium tests to route commands to remote web browser instances.
@@ -26,7 +26,7 @@
  (instead of in each individual test).
 
 
-<h2 class=pros_and_cons>Pros and cons</h2>
+<h2 id="pros_and_cons">Pros and cons</h2>
 
 <p>Selenium Grid isn't a silver bullet.
  It solves a subset of common delegation and distribution problems,
@@ -81,7 +81,7 @@
 </dl>
 
 
-<h2>What is a hub and node?</h2>
+<h2 id="what_is_a_hub_and_node">What is a hub and node?</h2>
 
 <p>A <em>hub</em> is a central point
  from where your tests will be kicked off.
@@ -100,7 +100,7 @@
  whereas this wouldn't be possible on Linux or Mac.
 
 
-<h2>Rolling your own grid</h2>
+<h2 id="rolling_your_own_grid">Rolling your own grid</h2>
 
 <p>To use Selenium Grid,
  you must maintain your own infrastructure for the nodes.
