--- a/install.html
+++ b/install.html
@@ -8,7 +8,7 @@
 <link rel=next href=start.html title="Getting Started">
 <script src=docs.js></script>
 
-<h1>Selenium installation</h1>
+<h1 id="selenium_installation">Selenium installation</h1>
 
 <p>Selenium setup is quite different from setup of other commercial tools.
  You don’t install a tool using Selenium binaries
@@ -18,7 +18,7 @@
  depends on browsers you want to run your tests in.
 
 
-<h2>Using browser specific JAR</h2>
+<h2 id="using_browser_specific_jar">Using browser specific JAR</h2>
 
 <p>If you want to run tests in only a specific browser,
  then you can add a browser specific dependency in your <i>pom.xml</i> file.
@@ -46,7 +46,7 @@
 </pre>
 
 
-<h2>Using non browser specific JAR</h2>
+<h2 id="using_non_browser_specific_jar">Using non browser specific JAR</h2>
 
 <p>More often than not, you would need to run tests
  in more than one browser.
@@ -65,7 +65,7 @@
 </pre>
 
 
-<h2>Using standalone JAR</h2>
+<h2 id="using_standalone_jar">Using standalone JAR</h2>
 
 <p>If you plan to use <a href=grid.html>Selenium Grid</a>,
  then you should download the
