--- a/intro.html
+++ b/intro.html
@@ -8,10 +8,10 @@
 <link rel=next href=install.html title=Install>
 <script src=docs.js></script>
 
-<h1>Introduction</h1>
+<h1 id="introduction">Introduction</h1>
 
 
-<h2>The Selenium project and tools</h2>
+<h2 id="the_selenium_project_and_tools">The Selenium project and tools</h2>
 
 
 <h3>Selenium controls web browsers</h3>
@@ -128,7 +128,7 @@
  into the <em>du jeur</em> remote control library for user agents.
 
 
-<h2>On test automation</h2>
+<h2 id="on_test_automation">On test automation</h2>
 
 <p>First, start by asking yourself whether or not you really need to use a browser.
  Odds are good that, at some point, if you're working on a complex web application,
@@ -351,7 +351,7 @@ Assert.assertTrue("Sparkles should have been created, with all attributes intact
  and add her to the cart.
 
 
-<h2>Types of testing</h2>
+<h2 id="types_of_testing">Types of testing</h2>
 
 <p>TODO: Add paragraphs about acceptance testing, performance testing,
  load testing, regression testing, test driven development, and/or
@@ -359,7 +359,7 @@ Assert.assertTrue("Sparkles should have been created, with all attributes intact
  with how they relate to Selenium.
 
 
-<h2>About this documentation</h2>
+<h2 id="about_this_documentation">About this documentation</h2>
 
 <p>These docs, like the code itself, are maintained 100% by volunteers
  within the Selenium community.
