--- a/quick.html
+++ b/quick.html
@@ -14,7 +14,7 @@
  but it composes many tools.
 
 
-<h2>WebDriver</h2>
+<h2 id="webdriver">WebDriver</h2>
 
 <p><em><a href=wd.html>WebDriver</a></em> is also known as Selenium
 2. If you are beginning with desktop website test automation then you
@@ -26,7 +26,7 @@ code, it is not intrusive in nature. Hence, you are testing the
 same application which you push live.
 
 
-<h2>Selenium Remote Control</h2>
+<h2 id="selenium_remote_control">Selenium Remote Control</h2>
 
 <p><em><a href=rc.html>Selenium Remote Control</a></em> is also known
 as Selenium 1. Selenium RC was the most prominent Selenium tool
@@ -40,7 +40,7 @@ still using Selenium RC then you must
 <em><a href=rctowd.html>migrate</a></em> to Selenium WebDriver.
 
 
-<h2>Selenium IDE</h2>
+<h2 id="selenium_ide">Selenium IDE</h2>
 
 <p><em><a href=ide.html>Selenium IDE</a></em> is a
 Firefox plugin which can be used to record test steps in Firefox itself. 
@@ -53,7 +53,7 @@ more than getting acquainted with element locators or generating
 WebDriver API, you will never use Selenium IDE.
 
 
-<h2>Selenium Grid</h2>
+<h2 id="selenium_grid">Selenium Grid</h2>
 
 <p> Soon after development of WebDriver tests, you may face a need of
 running your tests on multiple browser and operating system combinations.
