--- a/start.html
+++ b/start.html
@@ -8,7 +8,7 @@
 <link rel=next href=wd.html title=WebDriver>
 <script src=docs.js></script>
 
-<h1>Getting started with WebDriver</h1>
+<h1 id="getting_started_with_webdriver">Getting started with WebDriver</h1>
 
 <p>Selenium supports automation of all the major browsers in the market
  through the use of <em>WebDriver</em>.
@@ -33,7 +33,7 @@
  <a href=drivers.html>Driver Idiosyncracies</a>.
 
 
-<h2>Consumer browsers</h2>
+<h2 id="consumer_browsers">Consumer browsers</h2>
 
 <p>The Selenium framework officially supports the following browsers:
 
@@ -48,7 +48,7 @@
 </table>
 
 
-<h2>Specialised browsers</h2>
+<h2 id="specialized_browsers">Specialised browsers</h2>
 
 <p>There is also a set of specialized browsers out there
  typically used in development environments.
@@ -72,7 +72,7 @@
 </table>
 
 
-<h2>Other third party drivers and plugins</h2>
+<h2 id="other_third_party_drivers_and_plugins">Other third party drivers and plugins</h2>
 
 <p>Selenium can be extended through the use of plugins. Here are a number of plugins created and maintained by third parties. For more information on how to create your own plugin or have it listed, consult the docs.
 
@@ -91,7 +91,7 @@
 </table>
 
 
-<h2>Locating elements</h2>
+<h2 id="locating_elements">Locating elements</h2>
 
 
 <h3>Locating one element</h3>
@@ -249,7 +249,7 @@ is an expensive operation, and the more you can narrow the scope of
 your search, the better.
 
 
-<h2>Performing actions on the AUT</h2>
+<h2 id="performing_actions_on_the_aut">Performing actions on the AUT</h2>
 
 <p>You can set an element's text using the sendKeys method as follows:
 
