--- a/typo.html
+++ b/typo.html
@@ -7,10 +7,10 @@
 <link rel=prev href=attr.html title="Copyright and Attributions">
 <script src=docs.js></script>
 
-<h1>Typographical conventions</h1>
+<h1 id="typographical_conventions">Typographical conventions</h1>
 
 
-<h2>Capitalisation of titles</h2>
+<h2 id="capitalisation_of_titles">Capitalisation of titles</h2>
 
 <p>One should avoid title capitalisation,
  such as <i>A Very Fine Heading</i>,
@@ -22,7 +22,7 @@
  with a single initial capital to start headers.
 
 
-<h2>Line length</h2>
+<h2 id="line_length">Line length</h2>
 
 <p>When editing the documentation’s source,
  which is written in plain HTML,
