--- a/wd.html
+++ b/wd.html
@@ -8,7 +8,7 @@
 <link rel=next href=remote.html title="Remote WebDriver">
 <script src=docs.js></script>
 
-<h1>WebDriver</h1>
+<h1 id="webdriver">WebDriver</h1>
 
 <p>The biggest change in Selenium recently
  has been the inclusion of the WebDriver API.
@@ -43,7 +43,7 @@
 </ul>
 
 
-<h2>Driver requirements</h2>
+<h2 id="driver_requirements">Driver requirements</h2>
 
 <p>Through WebDriver, Selenium supports all major browsers on the market
  such as Chrom(ium), Firefox, Internet Explorer, Opera, and Safari.
@@ -342,7 +342,7 @@ driver = Selenium::WebDriver.for :opera</code></pre>
 <h4>PhantomJS</h4>
 
 
-<h2>Browser launching and manipulation</h2>
+<h2 id="browser_launching_and_manipulation">Browser launching and manipulation</h2>
 
 <!-- #codeExamples -->
 <!-- Remember to cover profile and extensions here -->
@@ -375,7 +375,7 @@ WebDriver driver = new InternetExplorerDriver();
 driver = Selenium::WebDriver.for :internet_explorer</code></pre>
 
 
-<h2>Waits</h2>
+<h2 id="waits">Waits</h2>
 
 <p>WebDriver can generally be said to have a blocking API.
  Because it is an out-of-process library that
@@ -647,14 +647,14 @@ fluentWait.until(new Predicate&lt;By&gt;() {
 browser.findElement(By.tagName("TEXTAREA")).sendKeys("text to enter");</code></pre>
 
 
-<h2 class=support_classes>Support classes</h2>
+<h2 id=support_classes>Support classes</h2>
 
-<h2 class=http_proxies>HTTP proxies</h2>
+<h2 id="http_proxies">HTTP proxies</h2>
 
-<h2 class="page_load_strategy">Page loading strategy</h2>
+<h2 id="page_loading_strategy">Page loading strategy</h2>
 
-<h2 class="webelement">Web elements</h2>
+<h2 id="webelement">Web elements</h2>
 
-<h2 class="keyboard">Keyboard</h2>
+<h2 id="keyboard">Keyboard</h2>
 
-<h2 class="mouse">Mouse</h2>
+<h2 id="mouse">Mouse</h2>
