--- a/worst.html
+++ b/worst.html
@@ -8,10 +8,10 @@
 <link rel=next href=grid.html title=Grid>
 <script src=docs.js></script>
 
-<h1>Worst practices</h1>
+<h1 id="worst_practices">Worst practices</h1>
 
 
-<h2>Captchas</h2>
+<h2 id="captchas">Captchas</h2>
 
 <p>CAPTCHA, short for <em>Completely Automated Public Turing test
  to tell Computers and Humans Apart</em>,
@@ -24,7 +24,7 @@
 </ul>
 
 
-<h2>File downloads</h2>
+<h2 id="file_downloads">File downloads</h2>
 
 <p>Whilst it is possible to start a download
  by clicking a link with a browser under Selenium's control,
@@ -38,7 +38,7 @@
  <a href=https://curl.haxx.se/libcurl/>libcurl</a>.
 
 
-<h2>HTTP response codes</h2>
+<h2 id="http_response_codes">HTTP response codes</h2>
 
 <p>For some browser configurations in Selenium RC,
  Selenium acted as a proxy between the browser
@@ -89,8 +89,7 @@
  so opting to use a proxy
  allows you to have a solution that works for every browser.
 
-
-<h2>Gmail, email, and Facebook logins</h2>
+<h2 id="gmail_email_and_facebook_logins">Gmail, email, and Facebook logins</h2>
 
 <p>For multiple reasons, logging into sites like Gmail and Facebook
  using WebDriver is not recommended.
@@ -120,7 +119,7 @@
  so that Denial of Service attacks can be mitigated.
 
 
-<h2>Test dependency</h2>
+<h2 id="test_dependency">Test dependency</h2>
 <p>
   A common idea and misconception about automated testing is regarding a
   specific test order. Your tests should be able to run in <strong>any</strong> order,
@@ -128,7 +127,7 @@
 </p>
 
 
-<h2>Performance testing</h2>
+<h2 id="performance_testing">Performance testing</h2>
 
 <p>Performance testing using Selenium and WebDriver
  is generally not advised.
@@ -175,7 +174,7 @@
 <p>Example (open source) packages to use are: Jmeter ?
 
 
-<h2>Link spidering</h2>
+<h2 id="link_spidering">Link spidering</h2>
 
 <p>Using WebDriver to spider through links
  is not a recommended practice not because it cannot be done,
