--- a/guidelines.html
+++ b/guidelines.html
@@ -8,7 +8,7 @@
 <link rel=next href=worst.html title="Worst Practices">
 <script src=docs.js></script>
 
-<h1>Guidelines and Recommendations</h1>
+<h1 id="guidelines_and_recommendations">Guidelines and Recommendations</h1>
 
 <p>A note on "Best Practices": We've intentionally avoided the phrase "Best
 Practices" in this documentation. No one approach works for all situations. 
@@ -31,7 +31,7 @@ will work for you in your particular environment.
  that have proven successful over the years.
 
 
-<h2>Page object models</h2>
+<h2 id="page_object_models">Page object models</h2>
 
 <p>Page Object is a Design Pattern which has become popular in test
 automation for enhancing test maintenance and reducing code
@@ -59,7 +59,7 @@ UI are located in one place.
 </ul>
 
 
-<h2>Domain Specific Language</h2>
+<h2 id="domain_specific_language">Domain Specific Language</h2>
 
 <p>A domain specific language (DSL) is a system which provides the user with
 an expressive means of solving a problem.  It allows a user to
@@ -151,7 +151,7 @@ should not concern themselves with HOW the UI requires you to go
 about it.
 
 
-<h2>Generating application state</h2>
+<h2 id="generating_application_state">Generating application state</h2>
 
 <p>Selenium should not be used to prepare a test case.  All repetitive
 actions, and preparation for a test case, should be done through other
@@ -164,13 +164,13 @@ testing should not be done using Selenium.  As mentioned previously,
 existing APIs should be leveraged to create data for the AUT.
 
 
-<h2>Mock external services</h2>
+<h2 id="mock_external_services">Mock external services</h2>
 
 <p>Eliminating the dependencies on external services will greatly improve
 the speed and stability of your tests.
 
 
-<h2>Improved reporting</h2>
+<h2 id="improved_reporting">Improved reporting</h2>
 
 <p>Selenium is not designed to report on the status of test cases
 run. Taking advantage of the built-in reporting capabilities of unit
@@ -182,10 +182,10 @@ for more information regarding report outputs for several languages.
 <!-- TODO: Add links.-->
 
 
-<h2>Avoid sharing state</h2>
+<h2 id="avoid_sharing_state">Avoid sharing state</h2>
 
 
-<h2>Test independency</h2>
+<h2 id="test_independency">Test independency</h2>
 
 <p>Write each test as its own unit.  Write the tests in a way that won't be reliant on other tests to complete:
 
@@ -195,7 +195,7 @@ for more information regarding report outputs for several languages.
 <p>Instead, you can create a stub content which can be turned on and off within the affected test, and use that for validating the module. However, for content creation, you can still have a separate test.
 
 
-<h2>Consider using a fluent API</h2>
+<h2 id="consider_using_a_fluent_api">Consider using a fluent API</h2>
 
 <p>Martin Fowler coined the term "Fluent API".  Selenium already
 implements something like this in their <code>FluentWait</code> class which is
@@ -267,7 +267,7 @@ gsp.withFluent().setSearchString().clickSearchButton();</code></pre>
 }</code></pre>
 
 
-<h2>Fresh browser per test</h2>
+<h2 id="fresh_browser_per_test">Fresh browser per test</h2>
 
 <p>Start each test from a clean known state.
  Ideally, spin up a new virtual machine for each test.
