Update Consumer browser section
Update the table for Firefox and Apple.

--- a/start.html
+++ b/start.html
@@ -41,10 +41,10 @@
  <tr><th>Browser</th> <th>Maintainer</th> <th>Versions Supported</th></tr>
 
  <tr><td>Chromium</td> <td><a href="//sites.google.com/a/chromium.org/chromedriver/">Chromium</a></td> <td>All versions</td></tr>
- <tr><td>Firefox</td> <td>Selenium</td> <td>4 and newer</td></tr>
+ <tr><td>Firefox</td> <td><a href="https://github.com/mozilla/geckodriver">Mozilla</a></td> <td>54 and newer</td></tr>
  <tr><td>Internet Explorer</td> <td>Selenium</td> <td>6 and newer</td></tr>
  <tr><td>Opera</td> <td>Opera <a href="//github.com/operasoftware/operachromiumdriver">Chromium</a> / <a href="//github.com/operasoftware/operaprestodriver">Presto</a></td> <td>10.5 and newer</td></tr>
- <tr><td>Safari</td> <td>Selenium</td> <td>5.1 and newer</td></tr>
+ <tr><td>Safari</td> <td><a href="https://webkit.org/blog/6900/webdriver-support-in-safari-10/">Apple</a></td> <td>10 and newer</td></tr>
 </table>
 
 
