Added updates on Selenium IDE not supported on Firefox. Updated broken link for selenium conference page on index page. Replaced with list of previous conference sites

--- a/index.html
+++ b/index.html
@@ -26,8 +26,15 @@
 
 <p>Selenium brings together browser vendors, engineers, and enthusiasts
  to further an open discussion around automation of the web platform.
- The project organises <a href="http://www.seleniumconf.org/">an annual conference</a>
- to teach and nurture the community.
+ The project organises an annual conference
+ to teach and nurture the community. Conferences held till now:
+ <ul>
+   <li><a href="https://2014.seleniumconf.in/2013/">Selenium Conference 2013</a></li>
+   <li><a href="https://2014.seleniumconf.in/">Selenium Conference 2014</a></li>
+   <li><a href="https://www.youtube.com/watch?v=bKUlyMaKz8Y&list=PLRdSclUtJDYXehIM7SyQyIghLDmE015Gc">Selenium Conference 2015</a></li>
+   <li><a href="https://2016.seleniumconf.in/">Selenium Conference 2016</a></li>
+   <li><a href="http://seleniumconf.com/">Selenium Conference 2017</a></li>
+ </ul>
 
 <p>At the core of Selenium is <em><a href=wd.html>WebDriver</a></em>,
  an interface to write instruction sets
