--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <p>Selenium brings together browser vendors, engineers, and enthusiasts
  to further an open discussion around automation of the web platform.
- The project organises an annual conference
+ The project organises an <a href="http://seleniumconf.com">annual conference</a>
  to teach and nurture the community. Conferences held till now:
  <ul>
    <li><a href="https://2014.seleniumconf.in/2013/">Selenium Conference 2013</a></li>
